# low-energy-particles-g4

./: .gitignore  CMakeLists.txt  shell.nix
include/: DetectorConstruction.hpp  PhysicsList.hpp  PrimaryGeneratorAction.hpp  RunAction.hpp  SensitiveDetector.hpp  SteppingAction.hpp
macros/: init.mac  init_vis.mac  sim.mac
report/: main.tex  treck_lenght.txt
src/: main.cpp
